# netroute-operator

./: .gitignore  .gitlab-ci.yml  .releaserc.json  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: build_docker-image.yml  build_python-bins.yml  docker-image.yml  release.yaml
deploy/: busybox.yaml  cr.yaml  crd.yaml  deployment.yaml  netroute.yaml  rbac.yaml
kubernetes/: crd.yaml  pod-busybox.yaml  pod-route-manager.yaml  podroute.yaml
src/: client.py  k8s.py  server.py
src/controller/: netroute.py  pod.py  pod_config.py  routing.py
src/controller/schema/: route.py
tests/: test_main.py  test_pods.py  test_route.py  test_routing.py
