[tool.poetry]
name = "nr-operator"
version = 1.0.9
description = "A Kubernetes Operator to manage routes on containers / pods"
authors = ["Samy Nitsche <samy@nitsche.io>"]

packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11.0"
kopf = "^1.32.1"
kubernetes = "^17.17.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
bpython = "^0.21"
pytest = "^6.2.4"
pyclean = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
